--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -11,17 +11,17 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  background-color: #151111;
+}
 body {
   /* font-family: 'Inter', sans-serif;
   font-family: 'Kaushan Script', cursive; */
   font-family: 'Roboto Slab', serif;
   background-color: var(--gainsboro);
-}
-/* What kind of selector is this? */
-.logo {
-  width: 300px;
-  height: 100px;
-  margin: 1% 10%;
+  max-width: 1300px;
+  margin: auto;
 }
 
 .name {
@@ -35,11 +35,12 @@ body {
   font-size: 18px;
   font-weight: 700;
 }
-header {
-  display: grid;
-  grid-template-columns: 25% 75%;
+/* header {
+  display: flex;
+  justify-content: space-around;
   width: 100%;
-}
+  margin-top: 5%;
+} */
 
 main {
   width: 100%;
@@ -49,43 +50,61 @@ main {
   gap: 10%;
 }
 
-/* This is an element within and element selector */
-nav > a {
-  margin: 4% 1% 3%;
-  height: 10%;
-  width: 15%;
-  color: var(--titles);
-  font-size: 20px;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  align-self: flex-end;
+.navbar {
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  justify-self: flex-start;
 }
 
-nav > a:hover {
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar-links li {
+  list-style: none;
+}
+
+.navbar-links li a {
+  text-decoration: none;
+  color: var(--titles);
+  font-size: 1.3rem;
+  padding: 3.2rem 3rem;
+  display: block;
+  text-align: center;
+}
+
+.navbar-links li a:hover {
+  font-size: 1.5rem;
   color: var(--turquoise);
 }
 
-.has-border {
-  border-radius: 25px;
-  border: 2px solid var(--glaucous);
-  background: none;
-  padding: 20px;
+.toggle-button {
+  position: absolute;
+  top: 3.5rem;
+  right: 2rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
 }
 
-nav {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 90%;
-  padding-right: 2%;
+.toggle-button .bar {
+  height: 2px;
+  width: 100%;
+  background-color: var(--titles);
+  border-radius: 10px;
 }
 /* This is an ID selector */
 #profile-pic {
   width: 80%;
   border-radius: 50%;
   margin: 15% 10%;
-  grid-column: 1/2;
 }
 .page-left {
   width: 40%;
@@ -106,9 +125,9 @@ nav {
 
 .main-links {
   height: 12rem;
-  width: 70%;
+  width: 80%;
+  /* margin: auto; */
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   color: whitesmoke;
@@ -116,37 +135,42 @@ nav {
 
 .resume-link {
   background-color: var(--red);
-  height: 120px;
-  width: 120px;
+  height: 140px;
+  width: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  text-align: center;
 }
 .myWork-link {
   background-color: var(--turquoise);
-  height: 120px;
-  width: 120px;
+  height: 140px;
+  width: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  text-align: center;
 }
 .mySkill-link {
   background-color: var(--khaki);
-  height: 120px;
-  width: 120px;
+  height: 140px;
+  width: 140px;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  text-align: center;
 }
 
 .main-paragraph {
   color: var(--titles);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  width: 70%;
+  width: 90%;
+  display: block;
+  margin-top: 10px;
 }
 
 footer {
@@ -182,39 +206,162 @@ footer {
   justify-content: space-between;
 }
 
-/* h1 {
-  color: white;
-  grid-column: 2/3;
-  margin: 3% auto;
-  border-bottom: 2px solid #1940a9;
-} */
+@media only screen and (max-width: 960px) {
+  .resume-link {
+    height: 90px;
+    width: 90px;
+  }
+  .myWork-link {
+    height: 90px;
+    width: 90px;
+  }
+  .mySkill-link {
+    height: 90px;
+    width: 90px;
+  }
+}
 
-/* h2 {
-  grid-column: 2/3;
-  margin: 3% auto;
-  font-style: italic;
-} */
+@media (max-width: 700px) {
+  body {
+    width: 100vw;
+    height: auto;
+  }
+  .logo {
+    display: block;
+    width: 100%;
+  }
+  .name {
+    font-size: 26px;
+    font-weight: 700;
+    margin-left: 1rem;
+  }
 
-/* .small-text {
-  grid-column: 2/3;
-  color: white;
-  font-size: 10px;
-  margin: 3% auto;
-} */
+  .position {
+    margin-left: 1rem;
+    font-size: 12px;
+    font-weight: 700;
+  }
 
-/* button {
-  grid-column: 2/3;
-  margin: 3% auto;
-  width: 70%;
-  height: 15%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  border-radius: 25px;
-  background: transparent;
-  padding: 20px;
-  padding-bottom: 5%;
-  text-align: center;
-  color: white;
-  letter-spacing: 16px;
-  font-style: italic;
-} */
+  .toggle-button {
+    display: flex;
+  }
+
+  .navbar-links {
+    display: none;
+    width: 100%;
+  }
+
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    margin: auto;
+    flex-direction: column;
+  }
+
+  .navbar-links li {
+    text-align: center;
+  }
+  .navbar-links li a {
+    padding: 0.7rem 1rem;
+  }
+
+  .navbar-links.active {
+    display: flex;
+  }
+
+  main {
+    flex-direction: column;
+  }
+
+  .page-left {
+    width: 80%;
+  }
+  .page-right {
+    width: 80%;
+  }
+
+  #profile-pic {
+    width: 80%;
+  }
+
+  .h1-main {
+    text-align: center;
+    font-size: 4rem;
+  }
+
+  .h2-main {
+    text-align: center;
+    font-size: 2rem;
+  }
+
+  .main-links {
+    height: 12rem;
+    width: 80%;
+    margin: auto;
+  }
+
+  .resume-link {
+    height: 80px;
+    width: 80px;
+    font-size: 1rem;
+  }
+
+  .mySkill-link {
+    height: 80px;
+    width: 80px;
+    font-size: 1rem;
+  }
+
+  .myWork-link {
+    height: 80px;
+    width: 80px;
+    font-size: 1rem;
+  }
+
+  .main-paragraph {
+    width: 100%;
+    margin: auto;
+  }
+
+  footer {
+    height: auto;
+    flex-direction: column;
+  }
+
+  .footer-column-top {
+    margin-top: 1rem;
+    text-align: center;
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .footer-column-middle {
+    margin-top: 1rem;
+    text-align: center;
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .footer-column-bottom {
+    margin-top: 1rem;
+    text-align: center;
+    width: 95%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  #container {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
