--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -206,6 +206,10 @@ footer {
   justify-content: space-between;
 }
 
+.underConstruction {
+  width: 100%;
+}
+/* !Breakpoints for Tablets and Small Laptops */
 @media only screen and (max-width: 960px) {
   .resume-link {
     height: 90px;
@@ -221,6 +225,7 @@ footer {
   }
 }
 
+/* !Breakpoints for Mobile Phone Devices */
 @media (max-width: 700px) {
   body {
     width: 100vw;
