--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -4,6 +4,7 @@
   --turquoise: #62cfd3ff;
   --gainsboro: #dbd9d9ff;
   --khaki: #c8be68ff;
+  --goldenrod: #daa520;
 }
 
 * {
@@ -19,13 +20,17 @@ body {
   /* font-family: 'Inter', sans-serif;
   font-family: 'Kaushan Script', cursive; */
   font-family: 'Roboto Slab', serif;
-  background-color: var(--gainsboro);
-  max-width: 1300px;
-  margin: auto;
+  background-image: url('./images/backgroundImg.jpg');
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 header {
-  background-color: #151111;
+  background-color: #151111a3;
 }
 .name {
   color: var(--gainsboro);
@@ -40,11 +45,14 @@ header {
 }
 
 main {
-  width: 100%;
+  width: 90%;
+  margin: auto;
+  /* padding: 10%; */
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  gap: 10%;
+  gap: 5%;
+  background: rgba (0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
 }
 
 .navbar {
@@ -79,7 +87,7 @@ main {
 .navbar-links li a:hover {
   transition: all 0.3s ease;
   font-size: 1.5rem;
-  color: var(--turquoise);
+  color: var(--goldenrod);
 }
 
 .toggle-button {
@@ -101,7 +109,7 @@ main {
 }
 /* This is an ID selector */
 #profile-pic {
-  width: 80%;
+  width: 90%;
   border-radius: 50%;
   margin: 15% 10%;
 }
@@ -114,12 +122,12 @@ main {
 
 .h1-main {
   font-size: 7rem;
-  color: var(--titles);
+  color: var(--goldenrod);
 }
 
 .h2-main {
   font-size: 4rem;
-  color: var(--titles);
+  color: var(--goldenrod);
 }
 
 .main-links {
@@ -162,7 +170,7 @@ main {
   text-align: center;
 }
 .mySkill-link {
-  background-color: var(--khaki);
+  background-color: var(--goldenrod);
   height: 140px;
   width: 140px;
   display: flex;
@@ -173,12 +181,17 @@ main {
 }
 
 .main-paragraph {
-  color: var(--titles);
+  color: var(--gainsboro);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.6;
   width: 90%;
   display: block;
   margin-top: 10px;
+  background: rgba (0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
 }
 
 footer {
@@ -187,7 +200,7 @@ footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #151111;
+  background-color: #151111a3;
   color: var(--gainsboro);
 }
 
