--- a/My_Portfolio/resume.css
+++ b/My_Portfolio/resume.css
@@ -3,6 +3,7 @@
   --titles: #4d4d4dff;
   --turquoise: #62cfd3ff;
   --gainsboro: #dbd9d9ff;
+  --goldenrod: #daa520;
   --khaki: #c8be68ff;
 }
 
@@ -91,11 +92,113 @@ header {
   border-radius: 10px;
 }
 
-/* iframe {
-  height: 100vh;
-  width: 100%;
-} */
+.resume {
+  margin: 4rem auto;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
+.upperCase {
+  font-family: 'Alegreya Sans SC', sans-serif;
+  font-size: 22px;
+}
+
+hr {
+  height: 6px;
+  width: 100%;
+  border-width: 0;
+  background-color: var(--titles);
+  margin-bottom: 1rem;
+}
+
+.divider-light {
+  height: 1px;
+  background-color: var(--titles);
+}
+
+.tag-line {
+  font-size: 1.8rem;
+}
+
+.contact-info {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+  color: var(--titles);
+  text-align: center;
+}
+
+.continued-education p {
+  margin-left: 1rem;
+}
+
+.job-position {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 18px;
+  margin-left: 1rem;
+  color: var(--red);
+}
+.certification {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 18px;
+}
+a,
+a:visited {
+  color: var(--titles);
+  font-weight: 500;
+}
+
+a:hover {
+  font-size: 110%;
+  color: var(--khaki);
+}
+
+a:active {
+  font-size: 105%;
+}
+.section-headers {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 22px;
+  color: var(--titles);
+}
+.qualifications {
+  font-weight: 100;
+}
+
+ul {
+  font-family: 'Alegreya Sans', sans-serif;
+  padding: 1rem 2rem;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+}
+
+li {
+  padding: 0.25rem 0;
+  line-height: 1.4rem;
+  list-style: square;
+}
+li:hover {
+  background-color: var(--khaki);
+}
+.company-name {
+  font-weight: 300;
+}
+
+.education {
+  padding-bottom: 2rem;
+}
+.cert-institution {
+  font-weight: 100;
+  font-size: 1rem;
+}
+
+.standard-text {
+  font-family: 'Alegreya Sans', sans-serif;
+  font-weight: 300;
+}
 @media (max-width: 700px) {
   body {
     width: 100vw;
