--- a/My_Portfolio/resume.css
+++ b/My_Portfolio/resume.css
@@ -127,13 +127,14 @@ li:hover {
 .resume-links {
   position: fixed;
   top: 11rem;
-  left: 19.15rem;
-  width: 65%;
+  left: 0;
+  max-width: 150px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 3rem;
   transition: 0.6s;
-  padding: 2rem 2rem;
+  padding: 1rem 1rem;
   background: #15111174;
 }
 
@@ -296,8 +297,13 @@ a:active {
     display: flex;
   }
 
-  /* iframe {
-    height: 100vh;
-    width: 100%;
-  } */
+  .resume-links {
+    max-width: 100%;
+    top: 4.3rem;
+    left: 0.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 2rem;
+  }
 }
