--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -230,6 +230,51 @@ footer {
 .underConstruction {
   width: 100%;
 }
+
+/* %Projects HTML styling */
+section {
+  width: 90%;
+  margin: 3rem auto;
+  /* padding: 10%; */
+  display: flex;
+  align-items: center;
+  gap: 5%;
+  background: rgba (0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
+}
+.projects-title {
+  color: var(--goldenrod);
+}
+
+.project-name {
+  font-family: 'Alegreya Sans SC';
+  color: var(--gainsboro);
+  font-size: 2rem;
+  line-height: 3;
+}
+
+.project-name a:link,
+.project-name a:visited {
+  color: var(--gainsboro);
+}
+.project-description {
+  font-family: 'Alegreya Sans';
+  color: var(--gainsboro);
+  font-size: 1.4rem;
+  line-height: 1.6;
+}
+
+.carrousel-image {
+  width: 30%;
+}
+
+.technologies {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  color: var(--turquoise);
+}
 /* !Breakpoints for Tablets and Small Laptops */
 @media only screen and (max-width: 960px) {
   .resume-link {
