Added a thumbnail viewer to each of the 2 projects I currently have entered on the projects page.

--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -297,8 +297,28 @@ section {
   line-height: 1.6;
 }
 
-.carrousel-image {
-  width: 30%;
+.carousel-image {
+  width: 40%;
+  box-shadow: 1px 1px 10px 5px rgba(66, 66, 66, 0.745);
+}
+
+.thumbnails {
+  margin-top: 2rem;
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  align-items: center;
+}
+
+.thumbnails li {
+  width: 15%;
+  box-shadow: 1px 1px 10px 5px rgba(65, 64, 64, 0.745);
+}
+
+.thumbnails li img {
+  width: 100%;
+  cursor: pointer;
 }
 
 .technologies {
