--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -324,9 +324,14 @@ section {
 .technologies {
   margin-top: 2rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   list-style-type: none;
   color: var(--goldenrod);
+}
+
+.technologies li {
+  flex-basis: 20%;
 }
 /* !Breakpoints for Tablets and Small Laptops */
 @media only screen and (max-width: 960px) {
