Changed e-birds flex direction to column for mobile view.

--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -507,6 +507,12 @@ section {
     gap: 3rem;
   }
 
+  #e-birds {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+
   .project-name {
     font-size: 1.2rem;
     text-align: center;
