--- a/My_Portfolio/styles.css
+++ b/My_Portfolio/styles.css
@@ -343,6 +343,64 @@ section {
   cursor: pointer;
 }
 
+/* % Contact Me Styling */
+form {
+  width: 80%;
+  height: 80%;
+  margin: 3rem auto;
+}
+
+form {
+  background-color: rgba(49, 49, 49, 0.6);
+  border-radius: 5px;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1.5;
+  max-width: 50%;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+input[type='text'] {
+  background-color: var(--gainsboro);
+  height: 2.5rem;
+  width: 80%;
+  /* margin: 1.25rem auto; */
+  padding: 0.8rem;
+  /* box-shadow: 0 0 15px 4px; */
+  /* rgba(0,0,0,0.06); */
+  border-radius: 10px;
+}
+
+textarea {
+  font-family: sans-serif;
+  font-size: 1rem;
+  background-color: var(--gainsboro);
+  border-radius: 10px;
+  padding: 1rem;
+}
+
+#contact-submit {
+  background-color: var(--red);
+  color: var(--gainsboro);
+  border-radius: 10px;
+  font-size: 1.5rem;
+  padding: 1rem;
+}
+
+#contact-submit:hover {
+  cursor: pointer;
+  font-size: 1.8rem;
+  transition: font-size 0.2s ease;
+}
+
+#contact-submit:active {
+  font-size: 1.5rem;
+  transition: font-size 0.1s ease;
+}
 /* !Breakpoints for Tablets and Small Laptops */
 @media only screen and (max-width: 960px) {
   .mySkill-link {
